# textology

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  bandit.yaml  conftest.py  pyproject.toml  requirements-dev.txt  requirements-full-dev.txt  requirements-full_dev.txt  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.hooks/: pre-push
docs/: ROADMAP.md
examples/: example_1_router.py  example_2_observers.py  example_3_textual_native.py  example_4_textual_with_routes.py  example_5_textual_with_observers.py  example_6_textual_with_local_callbacks.py  example_7_textual_with_dash_compat.py
textology/: __init__.py  apps.py  awaitables.py  dash_compat.py  history.py  logging.py  pages.py  parallel.py  pytest_utils.py  router.py  test-template.html  textual_utils.py
textology/observers/: __init__.py  _dependencies.py  _exceptions.py  _managers.py
textology/observers/test/: test_dependencies.py  test_observers.py
textology/test/: basic_app.py  basic_themed_app-green_btn.css  basic_themed_app-white_border.css  basic_themed_app.py  test_apps.py  test_awaitables.py  test_dash_compat.py  test_observers.py  test_pages.py  test_parallel.py  test_router.py
textology/widgets/: __init__.py  __init__.pyi  _button.py  _containers.py  _extensions.py  _horizontal_menus.py  _label.py  _list_item.py  _list_item_header.py  _list_item_meta.py  _list_view.py  _location.py  _modal_dialog.py  _multi_select.py  _page_container.py  _popup_text.py  _static.py  _store.py  _text.py  _tree.py
textology/widgets/_textual/: __init__.py  _checkbox.py  _collapsible.py  _containers.py  _content_switcher.py  _data_table.py  _digits.py  _directory_tree.py  _footer.py  _header.py  _label.py  _loading_indicator.py  _log.py  _markdown.py  _option_list.py  _pretty.py  _progress_bar.py  _radio_button.py  _radio_set.py  _rich_log.py  _rule.py  _select.py  _selection_list.py  _sparkline.py  _static.py  _switch.py  _tabbed_content.py  _tabs.py  _text_area.py  _text_input.py  _text_log.py  _tooltip.py  _tree.py
textology/widgets/_textual/test/: test_textual_widgets.py
textology/widgets/test/: test_widgets.py
utils/: pydocstyle_patched.py
